Avoid NPE on localization #11785